--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -14,7 +14,9 @@
 
   "image_name": "cyberdojofoundation/java_cucumber_spring",
 
-  "filename_extension" : ".java",
+  "runner_choice": "stateless",
 
-  "runner_choice": "stateless"
+  "max_seconds": 15,
+
+  "filename_extension" : ".java"
 }
